
Version 1.4.1
* Small update to make the PIP installation more robust

Version 1.4.5
* Added extra scripts:
	- merge_bcl : merge BCL files based in patterns
	- filter_gene_type_matrix : filter gene in output data based on Ensembl gene types
* Bumped Pysam and HTSeq 

Version 1.5.0
* st_qa.py generate expression heatmap plots
* Fixed a minor bug in the computation of the saturation curves
* adjust_matrix_coordinates now does not update the coordinates by default
* adjust_matrix_coordiantes works with the latest ST Spot detector format
* small updates in the fastq merging script
* relaxed a bit the restriction checks for some parameters

Version 1.5.1
* Fixed a bug that will output the matrix of counts inverted

Version 1.6.0
* Made the parsing of unique UMIs gene by gene and parallel
* AdjacentBi is now the default method for UMI counting
* Made the trimming function output the trimmed R2 in BAM format with the barcode and UMI
* Made the mapping function works with a BAM file as input (latest STAR release)
* Made the annotation function parallel
* Made the quality step parallel
* Improvements in speed and memory (constant memory use)
* The STAR genome loading strategy can be now set
* Added an affinity based method to cluster UMIs
* Added option to set the STAR BAM sort memory limit

Version 1.6.1
* Added option to disable the barcode demultiplexing step
* Added option to disable the UMI filtering step

Version 1.6.2
* Fixed a error in the parameters

Version 1.6.5
* Improved the st_qa.py script
* Few small improvements in the annotation step
* Added support to use a transcriptome (--transcriptome)

Version 1.7.2
* Removed parallel code for un-necessary parts
* Added option to provide saturation points

Version 1.7.3
* Fixed a small bug when soring the output of taggd
* Improved the st_qa.py script

Version 1.7.6
* Ported to Python 3

Version 1.7.8
* Updaed docs
* Added flags to skip (trimming, mapping and annotation)